# TruFor

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  basic_usage.py
trufor/: __init__.py  cli.py  utils.py
trufor/config/: __init__.py  config.py
trufor/datasets/: __init__.py  test_dataset.py  trufor_dataset.py
trufor/models/: DnCNN.py  __init__.py  dncnn.py  trufor_model.py
trufor/models/cmx/: __init__.py  builder_np_conf.py
